# quickjs

./: .gitignore  .gitmodules  .npmignore  .prettierignore  CMakeLists.txt  LICENSE  Makefile  README.md  Tuprules.tup  bun.lockb  jest.config.js  package-lock.json  package.json  todo.txt  tsconfig.json  tup-generate.vardict  tup.config  upstream-merge-status.md  vitest.config.ts
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/research/: 2026-02-02-jest-force-exit.md  2026-02-02-win32-process-and-pipes.md  2026-02-04-test-patterns.md  61e8b94-port-notes-2026-04-24-133100Z.md  (+27 more)
build-darwin/: tup.config
build-darwin-arm/: tup.config
build-darwin-arm-from-linux/: tup.config
build-darwin-from-darwin/: tup.config
build-darwin-from-linux/: tup.config
build-linux/: tup.config
build-linux-from-linux/: tup.config
build-windows/: tup.config
build-windows-from-linux/: tup.config
buildscripts/: build-darwin-arm-from-linux.sh  build-darwin-arm.sh  build-darwin-from-darwin.sh  build-darwin-from-linux.sh  build-darwin.sh  build-linux-from-linux.sh  build-linux.sh  build-windows-from-linux.sh  build-windows.sh
configs/: darwin-arm-from-linux.config  darwin-from-darwin.config  darwin-from-linux.config  darwin.config  example.config  linux-from-linux.config  linux.config  windows-from-linux.config  windows.config
docker/: Dockerfile.build-darwin  Dockerfile.build-darwin-arm  Dockerfile.build-linux  Dockerfile.build-windows  build-all.sh  build-images.sh  run-image.sh
examples/: contexts.js  fib.c  logging.js  point.c  print-stdin-bytes.js
meta/: build.sh  ci-in-docker.sh  ci.sh  clean.sh  microbench.js  tsconfig.json  update-buildscripts.sh
npm/: index.js  index.mjs  platforms.json  run-binary.js
oldtests/: microbench.js  test_builtin.js  test_worker.js  test_worker_module.js
src/: tsconfig.json
tests/: _setup.ts  _teardown.ts  _utils.ts  array-buffer-literal.test.ts  bjson.c  cjs-interop-__cjsExports.test.ts  cjs-interop-mutating-module-ns.test.ts  cjs-interop-script-goal.test.ts  cjs-interop.test.ts  cmdline.test.ts  create-process.test.ts  encoding-fuzzer.test.ts  engine-module.test.ts  error-cause.test.ts  error-properties.test.ts  exit-code-stuff.test.ts  fetch-cosmo.test.ts  fetch-wine.test.ts  fetch.test.ts  file-to-bytecode.test.ts  format-value.test.ts  getpwuid.test.ts  globals.test.ts  import-attributes.test.ts  import-error.test.ts  import-meta-require.test.ts  import-meta-resolve.test.ts  inspect-custom.test.ts  inspect.test.ts  intervals.test.ts  libbytecode.test.ts  libcontext.test.ts  libencoding.test.ts  libmodule.test.ts  libpointer.test.ts  load-module-via-urlget.test.ts  module-define.test.ts  module-detect.test.ts  module-hooks.test.ts  module-read.test.ts  (+41 more)
(+638 files in other folders)
